† fix bug and add real data †

--- a/code/packages/client/src/index.css
+++ b/code/packages/client/src/index.css
@@ -9,5 +9,11 @@ a {
 }
 
 .js-search-link {
+    border: none;
+    cursor: pointer;
     margin-bottom: 0;
+}
+
+.number-on-page {
+    color: #f44336;
 }
