† add sort by name price in TopNavProduct htl filter by  †

--- a/code/packages/client/src/index.css
+++ b/code/packages/client/src/index.css
@@ -17,3 +17,13 @@ a {
 .number-on-page {
     color: #f44336;
 }
+
+.filters-by-list {
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+}
+
+.make-it-gap>div {
+    margin-right: 10px;
+}
