--- a/code/packages/client/src/index.css
+++ b/code/packages/client/src/index.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    overflow-x: hidden;
 }
 
 a {
@@ -27,3 +28,6 @@ a {
 .make-it-gap>div {
     margin-right: 10px;
 }
+ /* .category-sub-menu>li::before {
+     content: "" !important; 
+} */
