--- a/code/packages/client/src/theme.css
+++ b/code/packages/client/src/theme.css
@@ -15,6 +15,10 @@
     margin-left: -1px;
     position: relative
 }
+.showdetailCheckout{
+    display: block;
+
+}
 
 .bootstrap-touchspin .input-group-btn-vertical .bootstrap-touchspin-up {
     border-radius: 0;
